--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "program": "${workspaceFolder}/main.go",
       "env": {
         "GRPC_REFLECTION": "true",
-        "CONFIG_FILE": "${workspaceFolder}/config.yaml"
+        "CONFIG_FILE": "${workspaceFolder}/example/config.yaml"
       }
     }
   ]
